@@ -1,3 +1,12 @@
+2006-12-19  Kouhei Sutou  <kou@cozmixng.org>
+
+	* packages/cairo/ext/rb_cairo_pattern.c:
+	- moved Cairo::SurfacePattern#{extend,filter}{,=} to
+	Cairo::Pattern. I can't remember why I defined them in
+	Cairo::SurfacePattern...
+	- defined Cairo::Pattern#__extend__ as alias of Object#extend to
+	avoid discarding.
+
 2006-12-15  Kouhei Sutou  <kou@cozmixng.org>
 
 	* packages/cairo/lib/cairo/context/path.rb: ported Pango's
